# tech-talk-backend

./: .gitignore  README.md  pyproject.toml
cdk/: .gitignore  app.py  cdk.context.json  dynamodb_policy.json
cdk/stacks/: conference_database_stack.py  conference_feedback_api_stack.py
scripts/: build_layer.py  deploy_cdk.sh  destroy_cdk.sh  populate_conference_database.py
src/: lambda_function.py
